--- a/lib/client/templates.html
+++ b/lib/client/templates.html
@@ -37,7 +37,7 @@
 		</a>
 		<div class="media-body">
             <p>{{content}}</p>
-			<small class="media-heading">USERNAME</small>
+			<small class="media-heading">{{niceName}}</small>
 		</div>
 	</div>
 </template>
